testdata/bad/stringWithEol.ion
// Strings cannot contain newlines.
123 "abc
" 123
